Add test for index.vue

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "core-js": "^3.8.2",
     "nuxt": "^2.14.12"
   },
